--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <header class="masthead bg-primary text-black text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="C:\Users\gustavo.correa\Desktop\startbootstrap-freelancer-gh-pages\imagens\Imagem do WhatsApp de 2023-11-16 à(s) 14.40.29_b2121b78.jpg" alt="..." />
+                <img class="masthead-avatar mb-5" src="imagens\Imagem do WhatsApp de 2023-11-16 à(s) 14.40.29_b2121b78.jpg" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Gustavo Alexandre Correa</h1>
                 <!-- Icon Divider-->
