--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light border-withe border-1" target="_blank" href="C:\Users\gustavo.correa\Desktop\startbootstrap-freelancer-gh-pages\imagens\Gustavo_Correa.pdf">
+                    <a class="btn btn-xl btn-outline-light border-withe border-1" target="_blank" href="imagens\Gustavo_Correa.pdf">
                         <i class="fas fa-download me-2"></i>
                         Download Currículo!
                     </a>
